# alphapickle

./: .gitignore  AlphaPickle.ipynb  CHANGELOG.md  README.md  pyproject.toml  run_AlphaPickle.py
.github/workflows/: docs.yml  test.yml
docs/: api.rst  conf.py  index.rst
src/alphapickle/: __init__.py  cli.py  metadata.py  runner.py
tests/: conftest.py  test_cli.py  test_cli_af2.py  test_metadata.py  test_runner_real.py
